<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:elevation="4dp"
            android:background="@color/light_green"
            android:theme="@style/ThemeOverlay.AppCompat.Dark">

        </android.support.v7.widget.Toolbar>

    </android.support.design.widget.AppBarLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/firstTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/firstNum"
                android:hint="@string/hintFirstNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/secondTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/secondNum"
                android:hint="@string/hintSecondNum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true"/>

        </android.support.design.widget.TextInputLayout>


    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_gravity="center"
        android:layout_marginLeft="@dimen/grid_margin"
        android:layout_marginRight="@dimen/grid_margin"
        android:columnCount="3"
        android:orientation="horizontal"
      >

        <Button
            android:id="@+id/addOp"
            android:text="@string/add"
            android:textSize="@dimen/buttonTextSize"
            android:textColor="@color/button"
            android:layout_gravity="fill"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@color/light_green"
            android:layout_height="@dimen/button_height" />

        <Button
            android:id="@+id/minusOp"
            android:text="@string/minus"
            android:textSize="@dimen/buttonTextSize"
            android:textColor="@color/button"
            android:layout_gravity="fill"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@color/light_green"
            android:layout_height="@dimen/button_height" />

        <Button
            android:id="@+id/clear"
            android:text="@string/clear"
            android:textSize="@dimen/buttonTextSize"
            android:textColor="@color/button"
            android:layout_gravity="fill_horizontal"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:layout_rowSpan="5"
            android:background="@color/light_green"
            android:layout_height="@dimen/clear_height"
            android:layout_width="110dp" />

        <Button
            android:id="@+id/multiplyOp"
            android:text="@string/multiply"
            android:textSize="@dimen/buttonTextSize"
            android:textColor="@color/button"
            android:layout_gravity="fill_horizontal"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@color/light_green"
            android:layout_height="@dimen/button_height" />

        <Button
            android:id="@+id/divideOp"
            android:text="@string/divide"
            android:textSize="@dimen/buttonTextSize"
            android:textColor="@color/button"
            android:layout_gravity="fill_horizontal"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
            android:background="@color/light_green"
            android:layout_height="@dimen/button_height" />

        <Button
            android:id="@+id/exit"
            android:text="@string/exit"
            android:textSize="@dimen/buttonTextSize"
            android:textColor="@color/button"
            android:layout_gravity="fill_horizontal"
            android:layout_columnSpan="3"
            android:height="@dimen/button_height"
            android:background="@color/light_green"
            android:layout_height="@dimen/button_height" />

    </GridLayout>


</LinearLayout>
